--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h2>About the Creator</h2>
   <p>
-    I am a taxation and IT professional with experience in public sector reform. My work focuses on using technology to simplify compliance, improve fraud detection, and modernize public revenue systems. XXX
+    I am a taxation and IT professional with experience in public sector reform. My work focuses on using technology to simplify compliance, improve fraud detection, and modernize public revenue systems.
   </p>
 
   <p>Contact: <a href="mailto:your@email.com">your@email.com</a></p>
