--- a/index.html
+++ b/index.html
@@ -3,25 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VICT System - Official Overview</title>
+  <title>VAT Input Credit Token (VCIT) System</title>
 </head>
-<body style="font-family: sans-serif; max-width: 800px; margin: auto;">
-  <h1>VAT Input Credit Token (VICT)</h1>
-  <p><strong>Patent Pending</strong></p>
+<body style="font-family: sans-serif; max-width: 800px; margin: auto; padding: 2rem;">
+  <h1>VAT Input Credit Token (VCIT) System</h1>
+  <p><strong>Patent Pending – LK/P/1/23557 (as of 26/04/2025)</strong></p>
+
+  <h2>What is the VCIT system?</h2>
   <p>
-    The VICT system is a blockchain-based reform that simplifies VAT compliance by tokenizing VAT input credits. It replaces paper vouchers with a transparent, automated credit mechanism.
+    The VAT Input Credit Token (VCIT) system simplifies VAT management by using blockchain-based digital tokens instead of manual paper invoices. Businesses trade tokens rather than collecting VAT at each transaction, eliminating administrative hassles and enhancing transparency.
+  </p>
+  <p>
+    Businesses obtain tokens backed by guarantees from the tax authority. These tokens can be split or aggregated to match transaction values exactly, providing flexibility for any business scale.
+  </p>
+  <p>
+    The blockchain system provides full transparency and audit trails, enabling real-time tracking and enhancing compliance monitoring.
   </p>
 
-  <h2>Downloads</h2>
+  <h2>General Business Process (Traditional VAT System)</h2>
+  <p>
+    Seller A sells a product to buyer B and issues an invoice including VAT (vat_B). When B resells to C, B includes VAT (vat_C). B remits to Revenue only the difference (vat_C - vat_B).
+  </p>
+
+  <h3>Record Keeping (Traditional)</h3>
+  <p>
+    Businesses like B must legally retain all purchase and sales invoices. Authorities regularly verify accuracy in VAT payments.
+  </p>
+
+  <h2>VCIT System Operation</h2>
+  <p>
+    When A sells to B, the invoice includes a QR code linked to A’s wallet. B scans this QR code, using a mobile app, and digitally transfers VAT tokens (vat_B) from B's wallet to A’s wallet. Tokens increase in A’s wallet and decrease in B’s wallet by vat_B.
+  </p>
+  <p>
+    When B sells to C, similar token transfers occur. No cash VAT remittance is needed in B2B transactions within the VCIT system.
+  </p>
+  <p>
+    If C is a final consumer outside the VCIT system, they pay cash VAT (vat_C) to B, who fully remits this amount to Revenue.
+  </p>
+
+  <h3>Record Keeping (VCIT)</h3>
+  <p>
+    Revenue provides initial VCIT tokens based on business size and activity. Transactions are fully digital, recorded, and transparently monitored via blockchain. Automated systems and AI continuously check compliance, flagging any suspicious activity for manual review.
+  </p>
+  <p>
+    VCIT simplifies VAT processes by collecting actual cash VAT only at the final consumption point, greatly reducing administrative burdens for businesses and allowing Revenue to focus entirely on detecting evasion and fraud.
+  </p>
+
+  <h3>Token Redemption</h3>
+  <p>
+    When VAT is collected from a final consumer, an equivalent amount of VCIT tokens (less the VAT for value addition in the final point) is returned to the tax authority. This closes the VAT credit loop securely and ensures proper reconciliation of tax liabilities.
+  </p>
+
+  <p>
+    Initially, the VCIT system can be piloted within limited sectors, similar to the former SVAT system.
+  </p>
+
+  <h2>Conclusion</h2>
+  <p>
+    The VCIT system represents a secure, efficient, and innovative solution for modernizing VAT processes. It ensures robust compliance, reduces operational burdens on both businesses and tax authorities, and enables transparent, traceable VAT transactions across the supply chain.
+  </p>
+
+  <hr>
+  <h3>Download</h3>
   <ul>
-    <li><a href="documents/VICT.pdf" download>Download: VICT Full Overview (PDF)</a></li>
+    <li><a href="documents/VICT.pdf" download>Download Full Technical Documentation (PDF)</a></li>
   </ul>
 
-  <h2>About the Creator</h2>
-  <p>
-    I am a taxation and IT professional with experience in public sector reform. My work focuses on using technology to simplify compliance, improve fraud detection, and modernize public revenue systems.
-  </p>
-
-  <p>Contact: <a href="mailto:your@email.com">your@email.com</a></p>
+  <hr>
+  <p>Site maintained by a tax administrator and IT professional. Detailed credentials coming soon.</p>
 </body>
 </html>
