--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <hr>
   <h3>Download</h3>
   <ul>
-    <li><a href="documents/VICT.pdf" download>Download Full Technical Documentation (PDF)</a></li>
+    <li><a href="doc/Technical Guide for VCIT.pdf" download>Download Full Technical Documentation (PDF)</a></li>
   </ul>
 
   <hr>
