--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VAT Input Credit Token (VCIT) System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>VCIT – Blockchain-Based VAT Reform (Patent Pending)</title>
+  
+  <!-- DESCRIPTION: appears in Google search result snippets -->
+  <meta name="description" content="The VAT Input Credit Token (VCIT) system is a blockchain-based solution that simplifies VAT compliance using tokenized transactions and smart auditing. Patent pending." />
+
+  <!-- KEYWORDS: helps search relevance (less important today, but still worth including) -->
+  <meta name="keywords" content="VAT token, VCIT, blockchain VAT, tax technology, VAT reform, tokenized tax system, Sri Lanka VAT, blockchain tax solution, VCIT patent, VAT Input Credit Token" />
+
+  <!-- AUTHOR: helps establish your professional identity -->
+  <meta name="author" content="Lal Senarath - Tax Administrator and IT Specialist" />
+
+  <!-- Canonical URL: helps prevent duplicate content issues -->
+  <link rel="canonical" href="https://www.taxtoken.info/" />
 </head>
 <body style="font-family: sans-serif; max-width: 800px; margin: auto; padding: 2rem;">
   <h1>VAT Input Credit Token (VCIT) System</h1>
