--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p><strong>Patent Pending – LK/P/1/23557 (as of 26/04/2025)</strong></p>
 
   <h2>What is the VCIT system?</h2>
-  <p> <a href=" https://vattoken.org/">More Details </a>  </p>
+  <p> <a href="https://vattoken.org/">More Details https://vattoken.org/</a>  </p>
   <p>
     The VAT Input Credit Token (VCIT) system simplifies VAT management by using blockchain-based digital tokens instead of manual paper invoices. Businesses trade tokens rather than collecting VAT at each transaction, eliminating administrative hassles and enhancing transparency.
   </p>
